--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -6,6 +6,7 @@
     "module": "preserve",
     "moduleResolution": "bundler",
     "declaration": true,
-    "target": "es2020"
+    "target": "es2020",
+    "skipLibCheck": true
   }
 }
