--- a/packages/lazy-object/tsconfig.build.json
+++ b/packages/lazy-object/tsconfig.build.json
@@ -2,8 +2,7 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "dist",
-    "rootDir": "src",
-    "noEmit": false
+    "rootDir": "src"
   },
   "exclude": ["src/**/*.test.ts", "dist"]
 }
