--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@biomejs/biome": "catalog:",
     "knip": "catalog:",
     "nx": "catalog:",
+    "premove": "^4.0.0",
     "syncpack": "catalog:",
     "typescript": "catalog:",
     "vitest": "catalog:"
