--- a/packages/lazy-object/package.json
+++ b/packages/lazy-object/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@jack3898/lazy-object",
   "description": "Lazily loaded objects with properties computed at get-time.",
-  "version": "1.3.4",
+  "version": "2.0.0",
   "author": "Jack Wright",
   "private": false,
   "type": "module",
@@ -11,6 +11,9 @@
     "projectType": "library",
     "targets": {
       "build": {
+        "defaultConfiguration": "build"
+      },
+      "prepack": {
         "defaultConfiguration": "build"
       },
       "dev": {
