--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -7,6 +7,8 @@
     "moduleResolution": "bundler",
     "declaration": true,
     "target": "es2020",
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true
   }
 }
