--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -4,11 +4,12 @@
     "exactOptionalPropertyTypes": true,
     "noUncheckedIndexedAccess": true,
     "module": "preserve",
-    "moduleResolution": "bundler",
     "declaration": true,
     "target": "es2020",
     "skipLibCheck": true,
     "noUnusedLocals": true,
-    "noUnusedParameters": true
+    "noUnusedParameters": true,
+    "erasableSyntaxOnly": true,
+    "verbatimModuleSyntax": true
   }
 }
