add collection match package

--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -16,13 +16,21 @@
           "command": "tsx watch src/lazy-object/index.ts"
         }
       },
+      "dev:match-collection": {
+        "executor": "nx:run-commands",
+        "options": {
+          "cwd": "{projectRoot}",
+          "command": "tsx watch src/match-collection/index.ts"
+        }
+      },
       "type-check": {
         "defaultConfiguration": "type-check"
       }
     }
   },
   "dependencies": {
-    "@jack3898/lazy-object": "workspace:^"
+    "@jack3898/lazy-object": "workspace:^",
+    "@jack3898/match-collection": "workspace:^"
   },
   "devDependencies": {
     "tsx": "^4.21.0",
