--- a/packages/lazy-object/package.json
+++ b/packages/lazy-object/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@jack3898/lazy-object",
   "description": "Lazily loaded objects with properties computed at get-time.",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "author": "Jack Wright",
+  "license": "Apache-2.0",
   "private": false,
   "type": "module",
   "main": "dist/index.js",
