--- a/packages/templater/package.json
+++ b/packages/templater/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@jack3898/templater",
   "description": "Use type-safe template strings to generate text content.",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "author": "Jack Wright",
   "license": "Apache-2.0",
   "private": false,
@@ -41,12 +41,12 @@
     "./README.md"
   ],
   "keywords": [
-    "templater",
     "strings",
-    "type-safe",
     "template",
     "template strings",
-    "text generation"
+    "templater",
+    "text generation",
+    "type-safe"
   ],
   "repository": "jack3898/jwtools.git",
   "types": "./dist/index.d.ts"
