--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "nx run-many -t build",
     "check": "knip && pnpm type-check && biome check",
+    "check:fix": "knip && pnpm type-check && biome check --fix",
     "dev": "nx run-many -t dev",
     "nx": "nx",
     "postinstall": "syncpack format",
