--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "nx run-many -t build",
     "check": "knip && pnpm type-check && biome check",
     "check:fix": "knip && pnpm type-check && biome check --fix",
-    "dev": "nx run-many -t dev",
+    "dev": "nx run-many -t dev --max-parallel=5",
     "nx": "nx",
     "postinstall": "syncpack format",
     "test": "vitest",
